Fix related project image cropping

--- a/src/components/ProjectDetail/RelatedProjectSlider/RelatedProjectSlider.module.scss
+++ b/src/components/ProjectDetail/RelatedProjectSlider/RelatedProjectSlider.module.scss
@@ -48,13 +48,12 @@
     width: 0;
     background: transparent;
   }
-  .isSingle &{
+
+  .isSingle & {
     width: 100%;
-    display: flex;
     justify-content: center ;
     padding-left: 0%;
-
-}
+  }
 }
 
 
@@ -66,6 +65,7 @@
     font-size: var(--font-xxs);
     font-weight: normal;
     text-decoration: none;
+
     @media (min-width: 864px){
       font-size: var(--font-small);
     }
@@ -73,40 +73,16 @@
 
   &:nth-of-type(1n + 2) {
     margin-left: 12px;
+
     @media (min-width: 864px){
       margin-left: 24px;
     }
   }
 
   .isSingle & {
-    width: 679px;
     display: flex;
     align-items: center;
     flex-flow: column wrap;
-    text-decoration: none;
-    @media (min-width: 864px){
-      width: 322px;
-    }
-    @media (min-width: 1152px) {
-      width: 679px;
-    }
-
-    p {
-      font-size: var(--font-xxs);
-      font-weight: normal;
-      text-decoration: none;
-      text-align: center;
-      @media (min-width: 864px){
-        font-size: var(--font-small);
-      }
-    }
-
-    &:nth-of-type(1n + 2) {
-      margin-left: 12px;
-      @media (min-width: 864px){
-        margin-left: 24px;
-      }
-    }
   }
 }
 
@@ -137,24 +113,5 @@
   @media (min-width: 1152px) {
     width: 408px;
     height: 512px;
-  }
-
-  .isSingle &{
-    width: 679px;
-    height: 452px;
-
-    & + p {
-      margin-top: 20px;
-    }
-
-    @media (min-width: 864px) {
-      width: 322px;
-      height: 404px;
-    }
-
-    @media (min-width: 1152px) {
-      width: 679px;
-      height: 452px;
-    }
   }
 }
